# faas

./: .gitignore  Cargo.toml  Dockerfile.api  Dockerfile.fe  README.md  bootstrap.sh  docker-compose.yml  hosteddb-init.sh  start_all.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: release.yaml  test.yaml
api/: Cargo.toml
api/src/: api.rs
bismuth_common/: Cargo.toml
bismuth_common/src/: api_error.rs  common.rs  lib.rs  tracing.rs
bismuth_common/src/metrics/: axum_metrics.rs  mod.rs
bismuth_common/src/test/: mod.rs
bismuthctl/: Cargo.toml
bismuthctl/src/: bismuthctl.rs
bismuthd/: Cargo.toml  build.rs
bismuthd/src/: bismuthd.rs  consts.rs  container.rs  container_manager.rs
bismuthfe/: Cargo.toml
bismuthfe/src/: bismuthfe.rs
svcprovider-oss/: Cargo.toml
svcprovider-oss/src/: svcprovider-oss.rs
testing/: e2e.py
