[package]
name = "bismuth_common"
version = "0.1.0"
edition = "2021"

[lib]
name = "bismuth_common"
path = "src/lib.rs"

[dependencies]
anyhow = {workspace = true}
thiserror = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
uuid = {workspace = true}
reqwest = "0.11.24"
opentelemetry-otlp = { version = "0.14.0", features = ["http-proto", "reqwest-client"] }
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.21.0", features = ["rt-tokio"] }
opentelemetry = {workspace = true}
url = {workspace = true}
zookeeper-client = {workspace = true}
http = {workspace = true}
conhash = {workspace = true}
axum = {workspace = true}
sentry = {workspace = true}
tower = {workspace = true}
futures-util = {workspace = true}
pin-project-lite = "0.2"