[package]
name = "bismuthd"
version = "0.1.0"
edition = "2021"

[lib]
name = "bismuthd"
path = "src/bismuthd.rs"

[[bin]]
name = "bismuthd"
path = "src/bismuthd.rs"

[dependencies]
anyhow = {workspace = true}
axum = {workspace = true}
clap = {workspace = true}
fd-lock = "4.0.2"
git2 = { version = "0.18.2", features = ["vendored-openssl"] }
iptables = "0.5.1"
rtnetlink = "0.14.1"
zookeeper-client = { workspace = true}
nix = { version = "0.27.1", features = ["mount"] }
uuid = { workspace = true }
tempfile = "3.8.1"
containerd-client = "0.4.0"
oci-spec = "0.6.4"
base64 = "0.21.7"
futures = {workspace = true}
prost = "0.11.9"
prost-types = "0.11.9"
tracing = {workspace = true}
tracing-opentelemetry = {workspace = true}
tracing-subscriber = { workspace = true}
url = {workspace = true}
bismuth_common = { path = "../bismuth_common" }
tokio = {workspace = true}
tokio-util = {workspace = true}
tokio-stream = {workspace = true}
opentelemetry = {workspace = true}
rand = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
http-body = {workspace = true}
hyper = {workspace = true}
opentelemetry-http = {workspace = true}
sentry = {workspace = true}
tower = {workspace = true}
axum-tracing-opentelemetry = {workspace = true}
arc-swap = "1.7.1"

[dev-dependencies]
serial_test = "3.0.0"

[build-dependencies]
prost-build = "0.11.9"